Adds background image to flashcard view

--- a/Play That Note/vexFlow/css/main.css
+++ b/Play That Note/vexFlow/css/main.css
@@ -1,12 +1,14 @@
 
 #note {
 /*    background-color: grey;*/
+
     width: 100%;
     margin:0;
 }
 
 body {
 /*    background-color: whitesmoke;*/
+background-image: url("../images/rough-beige-paper-texture.jpg");
     overflow: hidden;
     margin: 0;
 }
