--- a/Play That Note/vexFlow/css/main.css
+++ b/Play That Note/vexFlow/css/main.css
@@ -2,13 +2,17 @@
 #note {
 /*    background-color: grey;*/
 
-    width: 100%;
-    margin:0;
+/*    width: 90%;*/
+/*    margin: 5%;*/
 }
 
 body {
 /*    background-color: whitesmoke;*/
-background-image: url("../images/rough-beige-paper-texture.jpg");
+    background-image: url("../images/rough-beige-paper-texture.jpg");
     overflow: hidden;
     margin: 0;
+}
+
+svg {
+    zoom: 100%;
 }
