Fix bug in app icon and add license page

--- a/Play That Note/Base.lproj/Main.storyboard
+++ b/Play That Note/Base.lproj/Main.storyboard
@@ -463,6 +463,34 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="License" id="njH-cI-gvf" userLabel="Licenses">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="oFh-vJ-Mok">
+                                        <rect key="frame" x="0.0" y="332" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oFh-vJ-Mok" id="8Bc-Wd-HXm">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S28-pU-fhg">
+                                                    <rect key="frame" x="-0.5" y="-1" width="375" height="44"/>
+                                                    <state key="normal" title="Tap for info"/>
+                                                    <connections>
+                                                        <segue destination="Ryv-sM-k3o" kind="show" id="ieC-td-6u1"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="S28-pU-fhg" firstAttribute="width" secondItem="8Bc-Wd-HXm" secondAttribute="width" id="Nlw-40-JMv"/>
+                                                <constraint firstItem="S28-pU-fhg" firstAttribute="centerX" secondItem="8Bc-Wd-HXm" secondAttribute="centerX" id="SCq-Ld-Ruk"/>
+                                                <constraint firstItem="S28-pU-fhg" firstAttribute="height" secondItem="8Bc-Wd-HXm" secondAttribute="height" id="kw9-FY-L1t"/>
+                                                <constraint firstItem="S28-pU-fhg" firstAttribute="centerY" secondItem="8Bc-Wd-HXm" secondAttribute="centerY" id="oWx-yf-n0u"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="N7v-t8-xuT" id="INx-lf-27R"/>
@@ -488,6 +516,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aUE-0s-7MA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="742" y="-722"/>
+        </scene>
+        <!--License View Controller-->
+        <scene sceneID="7bX-Ro-bZK">
+            <objects>
+                <viewController id="Ryv-sM-k3o" customClass="LicenseViewController" customModule="Play_That_Note" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ri1-XE-k76"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qef-5d-7BL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rWS-r6-hED">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="viQ-0D-XDk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1457" y="-722"/>
         </scene>
         <!--Settings-->
         <scene sceneID="6CV-vI-b4a">
